import React from 'react'
import { UserProfile } from './UserProfile'
import parse from 'date-fns/parse'

let basicProps = null
let createdDate = parse('2017-02-23')

beforeEach(() => {
  basicProps = {
    user: {
      id: 357,
      isLoggedIn: true,
      created: createdDate,
      osmProfile: {
        avatarURL: "some/url"
      }
    },
  }
})

test('it just shows a sign-in option if the user is not logged in', () => {
  basicProps.user.isLoggedIn = false

  const wrapper = shallow(
    <UserProfile {...basicProps} />
  )

  expect(wrapper.find('.user-profile--signin').exists()).toBe(true)
  expect(wrapper.find('.user-profile__personal').exists()).toBe(false)

  expect(wrapper).toMatchSnapshot()
})

test('it shows user profile data if the user is logged in', () => {
  const wrapper = shallow(
    <UserProfile {...basicProps} />
  )

  expect(wrapper.find('.user-profile__personal').exists()).toBe(true)

  expect(wrapper).toMatchSnapshot()
})
